# shellscribe

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONFIG_FORMAT.md  CONTRIBUTING.md  CORE_CONTRACTS.md  DESIGN_DOC.md  GLOSSARY.md  LICENSE  PLUGIN_COMPATIBILITY.md  README.md  SECURITY.md  THREAT_MODEL.md  TODO.md  VERSIONING.md  complete_discussion_atoz_offsec_offline_llm.md  github_issues.csv  github_issues.md  pyproject.toml
cli/: README.md
cpp/: CMakeLists.txt
cpp/include/shellscribe/: core.hpp
cpp/src/: core.cpp
docs/: README.md
examples/: config.example.yaml
schemas/: README.md  artifact.schema.json  event.schema.json  finding.schema.json  plugin_manifest.schema.json  target_profile.schema.json  task.schema.json
src/shellscribe/: __init__.py  __main__.py
src/shellscribe/cli/: main.py
src/shellscribe/core/: artifacts.py  config.py  event_bus.py  orchestrator.py  policy.py  state.py  types.py
src/shellscribe/core/storage/: __init__.py  event_log.py  state_db.py
src/shellscribe/llm/context/: __init__.py  memory.py
src/shellscribe/llm/prompts/: __init__.py  pipelines.py
src/shellscribe/llm/runtime/: base.py  hf_transformers.py  llama_cpp.py
src/shellscribe/ml/: __init__.py  clustering.py  ranking.py  triage.py
src/shellscribe/modules/: __init__.py  base.py
src/shellscribe/modules/emulation/: module.py
src/shellscribe/modules/exploit_scaffold/: module.py
src/shellscribe/modules/fuzzing/: module.py
src/shellscribe/modules/plan_synth/: module.py
src/shellscribe/plugins/: interfaces.py  manager.py
(+3 files in other folders)
