[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellscribe"
version = "0.1.0"
description = "Offline-first, library-centric security testing framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ShellScribe Authors"}]

[project.scripts]
shellscribe = "shellscribe.cli.main:main"
